Prototyped Campaign domain object with RESTful interface. Creation behavior in place with integration unit test (using Mockito)

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ build/
 .gradle/
 out/
 target/
-.iws
-.ipr
+rpgCampaigner.iws
+rpgCampaigner.ipr
+rpgCampaigner.iml
 .directory
 .settings
 .classpath
