--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile 'org.springframework:spring-core:3.2.4.RELEASE'
 	compile 'org.springframework.data:spring-data-mongodb:1.3.1.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
+    compile 'org.springframework.hateoas:spring-hateoas:0.7.0.RELEASE'
 
     provided 'javax.servlet:javax.servlet-api:3.0.1'
 
