--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'war'
+apply plugin: 'tomcat'
 
 //these create the 'provided' scope, mainly for the servlet dependency
 apply plugin: 'propdeps'
@@ -23,6 +24,7 @@ buildscript {
   }
 
   dependencies {
+    classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.8'
     classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.1'
   }
 }
@@ -33,6 +35,12 @@ repositories {
 }
 
 dependencies {
+    def tomcatVersion = '7.0.42'
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
+    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
+        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
+    }
 	compile 'org.springframework:spring-core:3.2.4.RELEASE'
 	compile 'org.springframework.data:spring-data-mongodb:1.3.1.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
@@ -55,4 +63,6 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.6'
+
+tomcatRunWar.contextPath = ''
 }
