--- a/build.gradle
+++ b/build.gradle
@@ -15,23 +15,23 @@ version = "0.1"
 sourceCompatibility = 1.7
 
 buildscript {
-  repositories {
-    mavenCentral()
-    maven {
-      url "http://download.java.net/maven/2"
+    repositories {
+        mavenCentral()
+        maven {
+            url "http://download.java.net/maven/2"
+        }
+        maven { url 'http://repo.spring.io/plugins-release' }
     }
-    maven { url 'http://repo.spring.io/plugins-release' }
-  }
 
-  dependencies {
-    classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.8'
-    classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.1'
-  }
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.8'
+        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.1'
+    }
 }
 
 repositories {
     mavenCentral()
-    maven { url 'http://repo.spring.io/milestone/'}
+    maven { url 'http://repo.spring.io/milestone/' }
 }
 
 dependencies {
@@ -41,9 +41,12 @@ dependencies {
     tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
         exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
     }
-	compile 'org.springframework:spring-core:3.2.4.RELEASE'
-	compile 'org.springframework.data:spring-data-mongodb:1.3.1.RELEASE'
+    compile 'org.springframework:spring-core:3.2.4.RELEASE'
+    compile 'org.springframework.data:spring-data-mongodb:1.3.1.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
+    compile 'org.springframework.security:spring-security-web:3.2.0.RC2'
+    compile 'org.springframework.security:spring-security-core:3.2.0.RC2'
+    compile 'org.springframework.security:spring-security-config:3.2.0.RC2'
     compile 'org.springframework.hateoas:spring-hateoas:0.7.0.RELEASE'
 
     provided 'javax.servlet:javax.servlet-api:3.1.0'
@@ -64,5 +67,5 @@ dependencies {
 task wrapper(type: Wrapper) {
     gradleVersion = '1.6'
 
-tomcatRunWar.contextPath = ''
+    tomcatRunWar.contextPath = ''
 }
