--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
         exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
     }
-    compile 'org.springframework:spring-core:3.2.4.RELEASE'
+    compile 'org.springframework:spring-core:4.0.1.RELEASE'
     compile 'org.springframework.data:spring-data-mongodb:1.3.1.RELEASE'
-    compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
+    compile 'org.springframework:spring-webmvc:4.0.1.RELEASE'
     compile 'org.springframework.security:spring-security-web:3.2.0.RC2'
     compile 'org.springframework.security:spring-security-core:3.2.0.RC2'
     compile 'org.springframework.security:spring-security-config:3.2.0.RC2'
@@ -51,11 +51,13 @@ dependencies {
 
     provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    runtime 'com.fasterxml.jackson.core:jackson-core:2.2.3'
-    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.3'
+    runtime 'com.fasterxml.jackson.core:jackson-core:2.3.0'
+    runtime 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
 
     compile 'org.slf4j:slf4j-api:1.7.5'
-    runtime 'org.slf4j:slf4j-jdk14:1.7.5'
+    runtime 'ch.qos.logback:logback-classic:1.1.1'
+    runtime 'ch.qos.logback:logback-core:1.1.1'
+//    runtime 'org.slf4j:slf4j-jdk14:1.7.5'
 
     testCompile 'com.jayway.jsonpath:json-path:0.8.1'
     testCompile 'com.jayway.jsonpath:json-path-assert:0.8.1'
