--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,14 @@
                     <target>7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <port>9090</port>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
