--- a/build.gradle
+++ b/build.gradle
@@ -1,71 +1,25 @@
 apply plugin: 'java'
-apply plugin: 'eclipse'
+//apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'war'
-apply plugin: 'tomcat'
+//apply plugin: 'war'
+//apply plugin: 'tomcat'
 
-//these create the 'provided' scope, mainly for the servlet dependency
-apply plugin: 'propdeps'
-apply plugin: 'propdeps-maven'
-apply plugin: 'propdeps-idea'
-apply plugin: 'propdeps-eclipse'
 
 version = "0.1"
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url "http://download.java.net/maven/2"
-        }
-        maven { url 'http://repo.spring.io/plugins-release' }
-    }
-
-    dependencies {
-        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.8'
-        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.1'
+//        maven {
+//            url "http://download.java.net/maven/2"
+//        }
+//        maven { url 'http://repo.spring.io/plugins-release' }
     }
 }
 
 repositories {
     mavenCentral()
     maven { url 'http://repo.spring.io/milestone/' }
-}
-
-dependencies {
-    def tomcatVersion = '7.0.42'
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
-    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
-        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
-    }
-    compile 'org.springframework:spring-core:3.2.4.RELEASE'
-    compile 'org.springframework.data:spring-data-mongodb:1.3.1.RELEASE'
-    compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
-    compile 'org.springframework.security:spring-security-web:3.2.0.RC2'
-    compile 'org.springframework.security:spring-security-core:3.2.0.RC2'
-    compile 'org.springframework.security:spring-security-config:3.2.0.RC2'
-    compile 'org.springframework.hateoas:spring-hateoas:0.7.0.RELEASE'
-
-    provided 'javax.servlet:javax.servlet-api:3.1.0'
-
-    runtime 'com.fasterxml.jackson.core:jackson-core:2.2.3'
-    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.3'
-
-    compile 'org.slf4j:slf4j-api:1.7.5'
-    runtime 'org.slf4j:slf4j-jdk14:1.7.5'
-
-    testCompile 'com.jayway.jsonpath:json-path:0.8.1'
-    testCompile 'com.jayway.jsonpath:json-path-assert:0.8.1'
-    testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-    testCompile 'junit:junit:4.+'
-    testCompile "org.mockito:mockito-all:1.9.5"
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.6'
-
-    tomcatRunWar.contextPath = ''
 }
