--- a/build.gradle
+++ b/build.gradle
@@ -9,17 +9,14 @@ version = "0.1"
 
 sourceCompatibility = 1.8
 
-buildscript {
-    repositories {
-        mavenCentral()
-//        maven {
-//            url "http://download.java.net/maven/2"
-//        }
-//        maven { url 'http://repo.spring.io/plugins-release' }
-    }
-}
-
 repositories {
     mavenCentral()
-    maven { url 'http://repo.spring.io/milestone/' }
+}
+
+subprojects {
+    apply plugin: 'java'
+
+    repositories {
+        mavenCentral()
+    }
 }
