--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,4 +1,5 @@
 
 dependencies {
-    testCompile 'junit:junit:4.11'
+	testCompile 'junit:junit:4.12'
+	testCompile 'org.mockito:mockito-core:2.2.29'
 }
